--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h2>معرض أعمالنا</h2>
 
   <div class="gallery-item">
-    <img src="imag/3.jpeg" alt="أثواب رجالية">
+    <img src="3.jpeg" alt="أثواب رجالية">
     <div class="gallery-text">
       <h3>أثواب رجالية</h3>
       <p>تفصيل دقيق بخامات فاخرة ولمسة أناقة</p>
@@ -57,7 +57,7 @@
   </div>
 
   <div class="gallery-item">
-    <img src="imag/mm.jpeg" alt="بدلات">
+    <img src="mm.jpeg" alt="بدلات">
     <div class="gallery-text">
       <h3>بدلات رجالية</h3>
       <p>تصميم أنيق يناسب جميع المناسبات</p>
@@ -65,7 +65,7 @@
   </div>
 
   <div class="gallery-item">
-    <img src="imag/ga2.jpeg" alt="أكوات رجالية">
+    <img src="ga2.jpeg" alt="أكوات رجالية">
     <div class="gallery-text">
       <h3>أكوات رجالية</h3>
       <p>جودة عالية واهتمام بأدق التفاصيل</p>
