--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="hero">
     <div class="overlay">
       <div class="logo">
-      
+
         <h1>قصر سباء</h1>
         <p>للخياطة الراقية</p>
       </div>
@@ -87,12 +87,9 @@
   <footer>
     <p>© 2025 قصر سباء – جميع الحقوق محفوظة</p>
   </footer>
-
-  <!-- زر واتساب -->
-  <a href="https://wa.me/967777497636"
-     class="whatsapp-btn"
-     target="_blank">
+<!-- أيقونة واتساب -->
+  <a href="https://wa.me/777497636" target="_blank" class="whatsapp-button">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساب" width="60" height="60">
   </a>
-
 </body>
 </html>
